--- a/monitoring/templates/monitoring/graph.html
+++ b/monitoring/templates/monitoring/graph.html
@@ -13,14 +13,80 @@
 </ol>
 {% include "monitoring/checkinfo.inc.html" %}
 <h3>{{ variable|display }}</h3>
-<div>
+<div id="profiles">
   {% for profile in profiles %}
     <a class="btn {% if profile == active_profile %}btn-primary{% else %}btn-default{% endif %}" href="{% url monitoring.views.render_check_page check.uuid variable.name profile %}">{{ profile }}</a>
   {% endfor %}
 </div>
-<div style="width: 100%">
+<div style="width: 100%; position: relative;" id="imgcontainer">
+  <div id="imgselector" style="background-color: rgba(30, 30, 220, 0.4); position: absolute; height: 153px; width: 1px; z-index: 100; visibility: hidden;">&nbsp;</div>
   <img class="widescreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}?start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
   <img class="narrowscreenonly" src="{% url monitoring.views.render_check check.uuid variable.name %}?width=410&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
   <img class="tinyscreenonly"   src="{% url monitoring.views.render_check check.uuid variable.name %}?width=220&amp;start={{ start }}&amp;end={{ end }}" alt="graph" style="margin: 0 auto" />
 </div>
+<script type="text/javascript">
+function min(a, b){ if( a < b ) return a; return b; }
+function max(a, b){ if( a > b ) return a; return b; }
+function draggerize(imgel, selector){
+  var in_drag = false,
+      start   = {{ start }},
+      end     = {{ end }},
+      maxX    = 0,
+      minX    = 0,
+      startX  = 0,
+      endX    = 0;
+  imgel.load(function(){
+    maxX = imgel.width() - 30;
+    minX = maxX - 700;
+  });
+  // Drag start
+  imgel.mousedown(function(ev){
+    ev.preventDefault();
+    var ctpos = $("#imgcontainer").position();
+    if(ev.pageX - ctpos.left >= maxX)
+      return true;
+    in_drag = true;
+    startX = max(ev.pageX - ctpos.left, minX);
+    selector.css({
+      top:    31,
+      left:   startX,
+      width:  1,
+      height: 153,
+      visibility: "visible",
+    });
+  });
+  // Dragging
+  var mousemove = function(ev){
+    if(!in_drag) return true;
+    var ctpos = $("#imgcontainer").position();
+    endX = min(ev.pageX - ctpos.left, maxX);
+    selector.css({
+      width:  endX - selector.position().left,
+    });
+  };
+  imgel.mousemove(mousemove);
+  selector.mousemove(mousemove);
+  // Drag end
+  var mouseup = function(ev){
+    if(!in_drag) return true;
+    selector.css({
+      visibility: "hidden",
+      left:   startX - 2,
+      width:  1,
+    });
+    in_drag = false;
+    var new_start = parseInt(start + (end - start) * (startX - minX) / (maxX - minX));
+    var new_end   = parseInt(start + (end - start) * (endX   - minX) / (maxX - minX));
+    start = new_start;
+    end   = new_end;
+    // Load the new image
+    imgel[0].src = "{% url monitoring.views.render_check check.uuid variable.name %}?start="+start+"&end="+end;
+    // Turn the currently highlighted button into a normal one
+    $("#profiles a.btn-primary").removeClass("btn-primary").addClass("btn-default");
+  };
+  imgel.mouseup(mouseup);
+  imgel.mouseout(mouseup);
+}
+draggerize($("img.widescreenonly"), $("#imgselector"));
+</script>
 {% endblock %}
