link to essays/en/why_fluxmon.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
     see where regularities emerge, and use those for predictions.
   </p>
 
+  <p>See also <a href="http://svedr.in/essays/en/why_fluxmon.html">Why I started working on Fluxmon</a>.</p>
+
   <div>
     <h2>Some features</h2>
     <ul>
