turn the search link into a little popup (only when JS is enabled)

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,24 @@
               <li><a href="/">Home</a></li>
               {% if user.is_authenticated %}
               <li><a href="{% url monitoring.views.profile %}">{{ user }}</a></li>
-              <li><a href="{% url monitoring.views.search %}">Search</a></li>
+              <li><a href="{% url monitoring.views.search %}" id="searchlink">Search</a></li>
               <li><a href="{% url django.contrib.auth.views.logout %}">Logout</a></li>
+              <script type="text/javascript">
+                $("#searchlink").popover({
+                  trigger: "manual",
+                  title: "Search",
+                  content: '<form action="{% url monitoring.views.search %}"><input type="text" class="form-control" id="searchinput" name="query" placeholder="Query" style="width: 250px" /></form>',
+                  placement: "bottom",
+                  html: true
+                });
+                $("#searchlink").on("shown.bs.popover", function(){
+                  $("#searchinput").focus();
+                });
+                $("#searchlink").click(function(ev){
+                  ev.preventDefault();
+                  $(this).popover('toggle');
+                });
+              </script>
               {% else %}
               <li><a href="{% url django.contrib.auth.views.login %}">Login</a></li>
               {% endif %}
