hide the popover when the search field is blurred

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
                 });
                 $("#searchlink").on("shown.bs.popover", function(){
                   $("#searchinput").focus();
+                  $("#searchinput").blur(function(){
+                    $("#searchlink").popover('hide');
+                  });
                 });
                 $("#searchlink").click(function(ev){
                   ev.preventDefault();
