set a nice page title

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fluxmon</title>
+    <title>{% block title %}Fluxmon{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
     <link rel="stylesheet"    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
