--- a/hosts/templates/hosts/host.html
+++ b/hosts/templates/hosts/host.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {# kate: space-indent on; indent-width 2; replace-tabs on; hl Django HTML Template; #}
 {% load display_extras %}
+{% block title %}Fluxmon &mdash; {{ host|display:"fqdn" }}{% endblock %}
 {% block content %}
 <ol class="breadcrumb">
   <li><a href="/">Home</a></li>
