--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
               <li><a href="/">Home</a></li>
               {% if user.is_authenticated %}
               <li><a href="{% url monitoring.views.profile %}">{{ user }}</a></li>
+              <li><a href="{% url hosts.views.domains %}">Hosts</a></li>
               <li><a href="{% url monitoring.views.search %}" id="searchlink">Search</a></li>
               <li><a href="{% url django.contrib.auth.views.logout %}">Logout</a></li>
               <script type="text/javascript">
