--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,10 @@
     <title>{% block title %}Fluxmon{% endblock %}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel='stylesheet'    href='http://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
-    <link rel="stylesheet"    href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet"    href="//getbootstrap.com/dist/css/bootstrap.min.css">
     <link rel="stylesheet"    href="/static/base.css">
     <link rel="stylesheet"    href="/static/bootstrap_footer.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   </head>
   <body>
     <div id="wrap">
@@ -71,7 +70,7 @@
       </div>
     </div>
 
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="//getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/display/display.js"></script>
   </body>
 </html>
