implement host options menu

--- a/hosts/templates/hosts/host.html
+++ b/hosts/templates/hosts/host.html
@@ -12,11 +12,10 @@
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
-    <li><a href="#">Action</a></li>
-    <li><a href="#">Another action</a></li>
-    <li><a href="#">Something else here</a></li>
+    <li><a href="{% url monitoring.views.config host.fqdn %}" target="_blank">Download Config</a></li>
     <li class="divider"></li>
-    <li><a href="#">Separated link</a></li>
+    <li><a href="#">Delete all Checks</a></li>
+    <li><a href="{% url hosts.views.delete_host host.fqdn %}">Delete Host</a></li>
   </ul>
 </div>
 <dl class="dl-horizontal">
