--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,8 @@
                   });
                 });
               </script>
+              {% elif user.is_authenticated %}
+              <li><a href="{% url django.contrib.auth.views.login %}">Guest</a></li>
               {% else %}
               <li><a href="{% url django.contrib.auth.views.login %}">Login</a></li>
               {% endif %}
