set variables tab active

--- a/monitoring/templates/monitoring/checkdetails.html
+++ b/monitoring/templates/monitoring/checkdetails.html
@@ -16,7 +16,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <ul class="nav nav-tabs">
-      <li><a href="#variables" data-toggle="tab">Variables</a></li>
+      <li class="active"><a href="#variables" data-toggle="tab">Variables</a></li>
       {% ifperm "a" on check %}
       <li><a href="#acls"      data-toggle="tab">ACLs</a></li>
       {% endifperm %}
